# fooyin-furnace-plugin

./: .gitignore  CMakeLists.txt  README.md  build-furnace-lib.sh
src/: furnaceinput.cpp  furnaceinput.h  furnaceinput.json.in  furnaceparser.cpp  furnaceparser.h  furnaceplugin.cpp  furnaceplugin.h
